<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/offerRideToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarAir"
            app:layout_scrollFlags="enterAlways" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/hitch_filter_bottom_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/offer_departure_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.65"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/offer_departure_info_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/departing_info"
                        android:textColor="@color/material_secondary_text"
                        android:textSize="@dimen/label_text_size"/>
                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/offer_origin_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/SpinnerStyle"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/offer_departure_time_layout"
                    android:layout_width="0dp"
                    android:layout_weight="0.35"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/offer_departure_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/at"
                        android:textColor="@color/material_secondary_text"
                        android:textSize="@dimen/label_text_size"/>
                    <TextView
                        android:id="@+id/offer_departure_time_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="showTimePickerDialog"
                        android:textSize="@dimen/input_hint_text_size"
                        android:theme="@style/SpinnerStyle"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined" />
                </LinearLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/origin_destination_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/origin_destination_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:hint="@string/destination"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/origin_through_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/origin_through_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/through"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/origin_comments_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/origin_comments_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comments"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/save_ride_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fab_mini_diameter"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="3dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:clickable="true"
                android:onClick="saveRide"
                android:background="@drawable/hitch_find_button"
                android:text="@string/save"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>