<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarAir"
            app:layout_scrollFlags="enterAlways|scroll|snap" />

        <LinearLayout
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_scrollFlags="enterAlways">
            <Button
                android:id="@+id/ride_filter_toggle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableLeft="@mipmap/ic_search_black_24dp"
                android:drawableStart="@mipmap/ic_search_black_24dp"
                android:visibility="visible"
                android:clickable="true"
                android:onClick="expandLayout"
                android:gravity="start|center_vertical"
                android:background="@drawable/transparent_ripple_button"
                android:textAllCaps="false"
                android:text="@string/search_hint"
                android:textSize="18sp"
                android:textColor="@color/material_secondary_text"/>
            <RelativeLayout
                android:id="@+id/ride_filter_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:visibility="gone">
                <Button
                    android:id="@+id/ride_clear_search_fields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:onClick="clearFields"
                    android:background="@drawable/transparent_ripple_button"
                    android:text="@string/clear_fields_button" />
                <LinearLayout
                    android:id="@+id/hitch_destination_layout"
                    android:layout_below="@id/ride_clear_search_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/hitch_destination_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/item_margin"
                        android:paddingEnd="@dimen/item_margin"
                        android:src="@mipmap/ic_location_on_black_24dp" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/hitch_destination_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/destination"
                            android:inputType="textShortMessage"
                            android:clickable="true"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/hitch_departure_info_layout"
                    android:layout_below="@id/hitch_destination_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.65"
                        android:layout_height="@dimen/label_height"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/hitch_departure_info_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:text="@string/departing_info"
                            android:textColor="@color/material_secondary_text"
                            android:textSize="@dimen/label_text_size"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ic_home_black_24dp"
                                android:paddingEnd="@dimen/item_margin"
                                android:paddingRight="@dimen/item_margin"/>
                            <android.support.v7.widget.AppCompatSpinner
                                android:id="@+id/hitch_origin_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:theme="@style/SpinnerStyle"
                                style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/hitch_departure_time_layout"
                        android:layout_width="0dp"
                        android:layout_weight="0.35"
                        android:layout_height="@dimen/label_height"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/hitch_departure_time_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:text="@string/at"
                            android:textColor="@color/material_secondary_text"
                            android:textSize="@dimen/label_text_size"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ic_access_time_black_24dp"
                                android:paddingEnd="@dimen/item_margin"
                                android:paddingRight="@dimen/item_margin"/>
                            <TextView
                                android:id="@+id/hitch_departure_time_textview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:onClick="showTimePickerDialog"
                                android:textSize="@dimen/input_hint_text_size"
                                android:theme="@style/SpinnerStyle"
                                style="@style/Base.Widget.AppCompat.Spinner.Underlined" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/ride_apply_filter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/fab_mini_diameter"
                    android:layout_marginTop="@dimen/item_margin"
                    android:layout_marginBottom="@dimen/item_margin"
                    android:layout_marginLeft="@dimen/item_margin"
                    android:layout_marginStart="@dimen/item_margin"
                    android:layout_below="@id/hitch_departure_info_layout"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:clickable="true"
                    android:onClick="filterRides"
                    android:background="@drawable/hitch_find_button"
                    android:text="@string/find"
                    android:textColor="@android:color/white" />
                <ImageButton
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:layout_below="@id/hitch_departure_info_layout"
                    android:layout_marginTop="@dimen/item_margin"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:onClick="collapseLayout"
                    android:src="@mipmap/ic_expand_less_black_24dp"
                    android:background="@drawable/transparent_round_ripple_button" />
            </RelativeLayout>
            <View
                android:id="@+id/ride_filter_table_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="?attr/colorPrimary" />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/ridesProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@android:color/transparent"
        android:indeterminate="true"
        android:visibility="gone"/>

    <TextView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/noResultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@android:color/transparent"
        android:visibility="gone"
        android:text="@string/no_rides_found"
        android:textSize="@dimen/ride_filter_no_rides_text_size"
        android:textColor="@color/material_secondary_text"/>

    <android.support.v7.widget.RecyclerView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/rides_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/material_divider_dark"
        android:paddingTop="@dimen/ride_list_divider_height"
        android:paddingLeft="@dimen/ride_list_divider_height"
        android:paddingRight="@dimen/ride_list_divider_height"
        android:paddingBottom="@dimen/ride_list_divider_height"
        android:scrollbars="vertical"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/ride_list_divider_height"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/offerFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:elevation="@dimen/fab_elevation"
        android:src="@mipmap/ic_add_ride_white"
        android:clickable="true"
        app:layout_anchor="@id/ride_filter_table_divider"
        app:layout_anchorGravity="center_vertical|right|end"
        app:fabSize="mini"
        android:layout_marginRight="@dimen/fab_horizontal_margin"
        android:layout_marginEnd="@dimen/fab_horizontal_margin"/>
</android.support.design.widget.CoordinatorLayout>